; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_n.c_b43_nphy_cal_rx_iq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_n.c_b43_nphy_cal_rx_iq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.nphy_txgains = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b43_wldev*, i32, i32, i32)* @b43_nphy_cal_rx_iq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b43_nphy_cal_rx_iq(%struct.b43_wldev* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.nphy_txgains, align 4
  %7 = alloca %struct.b43_wldev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = getelementptr inbounds %struct.nphy_txgains, %struct.nphy_txgains* %6, i32 0, i32 0
  store i32 %1, i32* %10, align 4
  store %struct.b43_wldev* %0, %struct.b43_wldev** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load %struct.b43_wldev*, %struct.b43_wldev** %7, align 8
  %12 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp sge i32 %14, 3
  br i1 %15, label %16, label %23

16:                                               ; preds = %4
  %17 = load %struct.b43_wldev*, %struct.b43_wldev** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = getelementptr inbounds %struct.nphy_txgains, %struct.nphy_txgains* %6, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @b43_nphy_rev3_cal_rx_iq(%struct.b43_wldev* %17, i32 %21, i32 %18, i32 %19)
  store i32 %22, i32* %5, align 4
  br label %30

23:                                               ; preds = %4
  %24 = load %struct.b43_wldev*, %struct.b43_wldev** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = getelementptr inbounds %struct.nphy_txgains, %struct.nphy_txgains* %6, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @b43_nphy_rev2_cal_rx_iq(%struct.b43_wldev* %24, i32 %28, i32 %25, i32 %26)
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %23, %16
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @b43_nphy_rev3_cal_rx_iq(%struct.b43_wldev*, i32, i32, i32) #1

declare dso_local i32 @b43_nphy_rev2_cal_rx_iq(%struct.b43_wldev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
